# poly-auto-trading

./: .env.example  .gitignore  Makefile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
backend/: alembic.ini  genApiKey.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_notifications.py  0003_kline_backfill_tasks.py  0004_indicator_backfill_tasks.py  0005_system_tasks.py  0006_drop_legacy_backfill_tables.py  0007_simplify_system_task_steps.py  0008_candle_unavailable_ranges.py  0009_polymarket_credentials.py
backend/app/: main.py
backend/app/api/: routes_auth.py  routes_candles.py  routes_health.py  routes_notifications.py  routes_polymarket.py  routes_reports.py  routes_signals.py  routes_status.py  routes_system_tasks.py
backend/app/core/: auth.py  config.py  lifecycle.py  logging.py
backend/app/cron/: __init__.py  jobs.py  scheduler.py
backend/app/db/: models.py  session.py
backend/app/schemas/: candle.py  market_signal.py  notification.py  polymarket.py  report.py  signal.py  status.py
backend/app/scripts/: __init__.py  import_polymarket_credentials.py
backend/app/services/: binance_archive_client.py  binance_client.py  binance_monitor.py  candle_backfill.py  candle_intervals.py  candle_store.py  external_http.py  indicator_backfill.py  indicator_store.py  indicators.py  maintenance.py  market_metadata.py  market_signal_pipeline.py  market_ws_hub.py  notifications.py  polymarket_account_monitor.py  (+15 more)
backend/tests/: conftest.py  test_auth.py  test_binance_archive_client.py  test_binance_endpoints.py  test_binance_monitor.py  test_candle_backfill.py  test_candle_validation.py  test_candles_api.py  test_config_loading.py  test_env_migration.py  test_external_http.py  test_health.py  test_indicator_backfill.py  test_indicators.py  test_logging.py  test_maintenance.py  test_market_signal_pipeline.py  test_market_ws_hub.py  test_notifications.py  test_polymarket_account_state.py  test_polymarket_credentials.py  test_polymarket_market_store.py  test_polymarket_monitor.py  test_polymarket_trading_api.py  test_polymarket_up_down.py  test_polymarket_ws_hub.py  test_reports.py  test_system_tasks.py
(+89 files in other folders)
