[project]
name = "poly-auto-trading"
version = "0.1.0"
description = "FastAPI and React dashboard for Polymarket BTC short-horizon trading research."
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.3.0",
  "apscheduler>=3.10.4",
  "httpx>=0.28.1",
  "pyyaml>=6.0.3",
  "websockets>=16.0",
]

[dependency-groups]
dev = [
  "pytest>=8.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
