[project]
name = "poly-auto-trading-backend"
version = "0.1.0"
description = "FastAPI backend for Polymarket and Binance monitoring."
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.13.0",
  "asyncpg>=0.29.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.3.0",
  "pyyaml>=6.0.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "uvicorn[standard]>=0.30.0",
  "websockets>=12.0",
]

[dependency-groups]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py313"

