[project]
name = "poly-auto-trading-backend"
version = "0.1.0"
description = "FastAPI backend for Polymarket and Binance monitoring."
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.13.0",
  "apscheduler>=3.10.4,<4.0.0",
  "asyncpg>=0.29.0",
  "cryptography>=43.0.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "polymarket-client>=0.1.0b7,<0.2.0",
  "pydantic-settings>=2.3.0",
  "py-clob-client-v2>=1.0.1",
  "pyyaml>=6.0.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "uvicorn[standard]>=0.30.0",
  "websockets>=12.0",
]

[dependency-groups]
dev = [
  "aiosqlite>=0.20.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py313"
